styles/scss/styles.scss
// Main scss file
@import "../normalize";
@import "sizes";
@import "fonts";
@import "theme";
@import "cssAni";

body {
  // Max width for the whole website
  max-width: 1260px;
  // Center the whole website
  margin: 0 auto;
  // Justify all text
  text-align: justify;

  // header {
  //   display: flex;
  // }

  header > h1 {
    // Remove main website margins
    margin-bottom: 0;
  }

  div > h2 {
    // Padding of the main article heading
    padding-bottom: $spacing-normal;
  }

  header > h1,
  div > h2,
  article > h3 {
    text-align: center;
  }
}

nav {
  li {
    // Separate menu items from background
    margin: $spacing-smaller;
    padding: $spacing-smaller;
  }
  a {
    // Allow menu item to be epandable
    display: block;
  }
}

article {
  .example-box {
    // Slight top margin for the example box
    margin-top: $spacing-smaller;
    // Add padding to the example box
    padding: $spacing-normal;
    // Add rounded border to the example box
    border-radius: $spacing-smaller;
  }
  .bottom-padding {
    // Separate the "example" box from the "result"
    padding-bottom: $spacing-small;
  }
  .indent {
    // 1nd level of indentetion for code examples
    margin-left: $spacing-normal;
  }
  .indent2 {
    // 2nd level of indentetion for code examples
    margin-left: $spacing-normal * 2;
  }
}

#bckBtn {
  // Hidden by default
  display: none;
  // Fixed/sticky position
  position: fixed;
  // Button set at the bottom of the page
  bottom: 3%;
  // Place the button 30px from the right
  right: 2%;
  // Make sure it does not overlap
  z-index: 99;
  // Remove borders
  border: none;
  // Remove outline
  outline: none;
  // Add a mouse pointer on hover
  cursor: pointer;
  // Some padding
  padding-top: 25px;
  // Rounded corners
  border-radius: 10px;
  // Set button fixed width
  width: 50px;
  // Set button fixed height
  height: 50px;
}

@media only screen and (max-width: 580px) {
  header {
    //
    // flex-direction: column;
    position: relative;
    margin-bottom: 90px;
  }

  .navWrapper {
    position: absolute;
    width: 100%;
  }

  #mobBtnDiv {
    display: block;
    margin: $spacing-smaller;
    position: relative;
    width: 44px;
    height: 43px;
    cursor: pointer;
    /* background color */
    background: #ccc;
    border-radius: $spacing-smaller;
  }

  .hamMenu {
    width: 28px;
    height: 5px;
    background: $color6;
    position: absolute;
    top: 45%;
    left: 19%;
    transition: 250ms;
    transition-delay: 250ms;
  }
  .hamMenu:before,
  .hamMenu:after {
    content: "";
    position: absolute;
    width: 28px;
    height: 5px;
    background: $color6;
    transition: 250ms;
    transition-delay: 150ms;
  }

  .hamMenu:before {
    top: -11px;
  }

  .hamMenu:after {
    top: 11px;
  }

  .active .hamMenu {
    // middle of menu
    background: rgba(0, 0, 0, 0);
    transition: 250ms;
  }

  .active .hamMenu:before {
    top: 0;
    transform: rotate(-135deg);
  }

  .active .hamMenu:after {
    top: 0;
    transform: rotate(135deg);
  }

  // .navWrapper {
  //   // transform: translate(20%, 100%);
  //   transition: transform 300ms ease-in-out;
  // }

  .navWrapper {
    overflow: hidden;
    height: 69px;
  }

  .navWrapper.inactive {
    // height: 69px;
    animation: mobMnuClose 300ms forwards;
  }
  .navWrapper.active {
    animation: mobMnuOpen 300ms forwards;
  }

  @keyframes mobMnuOpen {
    from {
      height: 69px;
    }
    to {
      height: 481px;
    }
  }

  @keyframes mobMnuClose {
    from {
      height: 481px;
    }
    to {
      height: 69px;
    }
  }

  /*//*/

  header > h1 {
    // Remove h1 top margin style
    margin-top: 0;
    // Set height of main website heading/image
    padding: $spacing-largest 0;
  }

  div > h2 {
    // Set margin of all global articles
    margin-top: $spacing-normal;
  }
  nav {
    li {
      // Separate menu items from background
      margin: $spacing-normal;
      padding: $spacing-normal/2;
    }
  }
  .navWrapper {
    padding: 5px;
  }
  nav ul {
    li {
      background-color: $color2;
      text-align: center;
    }
  }
  .contentWrapper {
    // Set margin of the global content wrapper
    margin: 0 $spacing-small;
  }
  .subWrap {
    // Set row gap of the article articles
    grid-row-gap: $spacing-normal;
  }
  article {
    // Set individual code article padding
    padding: $spacing-small;
    margin-bottom: $spacing-small;
  }
  article > p {
    // Set code article description padding
    padding: $spacing-normal 0 $spacing-small;
  }
  #bckBtn {
    display: none !important;
  }
}

@media only screen and (min-width: 581px),
  only screen and (min-width: 700px) and (orientation: landscape) {
  // header {
  //   flex-direction: column;
  // }

  #mobBtnDiv {
    display: none;
  }

  header > h1 {
    // Remove h1 top margin style
    margin-top: 0;
    // Set height of main website heading/image
    padding: $spacing-largest 0;
    //
    display: block !important;
  }
  nav {
    display: block !important;
  }
  div > h2 {
    // Set margin of all global articles
    margin-top: $spacing-normal;
  }
  nav ul {
    // Set nav menu layout as a grid
    display: grid;
    // Center all menu items
    justify-items: center;
    // Center the grid itself
    justify-content: center;
    // Set nav menu to 6 columns, each 80px wide
    grid-template-columns: repeat(6, 80px);
    // Set nav menu items column gap to 10px
    grid-column-gap: 10px;
  }
  .contentWrapper {
    // Set margin of the global content wrapper
    margin: 0 $spacing-normal;
  }
  .subWrap {
    // Set all code articles layouts as a CSS grid
    display: grid;
    // Set row gap of the article articles
    grid-row-gap: $spacing-normal;
  }
  article {
    // Set individual code article padding
    padding: $spacing-normal;
  }
  article > p {
    // Set code article description padding
    padding: $spacing-normal 0 $spacing-small;
  }
}

@media only screen and (min-width: 1023px) {
  header > h1 {
    // Remove h1 top margin style
    //margin-top: 0;
    // Set height of main website heading/image
    padding: $spacing-largest * 2 0;
  }
  div > h2 {
    // Set margin of all global articles
    margin-top: $spacing-normal;
  }
  nav ul {
    // Set nav menu to 6 columns, each 80px wide
    grid-template-columns: repeat(6, 80px);
    // Set nav menu items column gap to 10px
    grid-column-gap: 20px;
  }
  .contentWrapper {
    // Set margin of the global content wrapper
    margin: 0 $spacing-large;
  }
  .subWrap {
    // Set two row grid
    grid-template-columns: 1fr 1fr;
    // Set column gap of the articles grid
    grid-column-gap: $spacing-normal;
    // Set row gap of the articles grid
    grid-row-gap: $spacing-normal;
  }
  article {
    // Set individual code article padding
    padding: $spacing-large;
  }
  article > p {
    // Set code article description padding
    padding: $spacing-normal 0 0;
    // Set the article description height
    height: 150px;
  }
}

@media only screen and (min-width: 1439px) {
  header {
    margin-top: $spacing-normal;
  }
}

// EXPEREMENTAL

